RESOLVED FIXED62469
Fetching a Worker with url that isn't allowed from a file based test causes DRT to crash.
https://bugs.webkit.org/show_bug.cgi?id=62469
Summary Fetching a Worker with url that isn't allowed from a file based test causes D...
David Levin
Reported 2011-06-10 13:13:00 PDT
The problem is that this results in a synchronous failure (in ResourceLoaderDelegate.mm, willSendRequest) which results in deleting the WorkerScriptLoader and calling ActiveDOMObject::unsetPendingActivity (before setPendingActivity has been called).
Attachments
Patch (16.51 KB, patch)
2011-06-10 13:55 PDT, David Levin
no flags
Patch for landing (19.07 KB, patch)
2011-06-10 16:08 PDT, David Levin
dimich: commit-queue-
David Levin
Comment 1 2011-06-10 13:55:59 PDT
WebKit Review Bot
Comment 2 2011-06-10 14:01:11 PDT
Attachment 96779 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast..." exit_code: 1 Source/WebCore/workers/WorkerScriptLoader.h:44: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dmitry Titov
Comment 3 2011-06-10 14:21:47 PDT
Comment on attachment 96779 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=96779&action=review r=me. Nice. >> Source/WebCore/workers/WorkerScriptLoader.h:44 >> + class ResourceRequest; > > Code inside a namespace should not be indented. [whitespace/indent] [4] Could be fixed as a separate patch...
David Levin
Comment 4 2011-06-10 16:08:39 PDT
Created attachment 96818 [details] Patch for landing
David Levin
Comment 5 2011-06-10 16:09:14 PDT
Attempt to fix Windows build error.
WebKit Review Bot
Comment 6 2011-06-10 16:11:18 PDT
Attachment 96818 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast..." exit_code: 1 Source/WebCore/workers/WorkerScriptLoader.h:44: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dmitry Titov
Comment 7 2011-06-10 16:52:05 PDT
Comment on attachment 96818 [details] Patch for landing View in context: https://bugs.webkit.org/attachment.cgi?id=96818&action=review > Source/WebCore/WebCore.xcodeproj/project.pbxproj:7437 > 417253A91354BBBC00360F2A /* MediaControlElements.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = MediaControlElements.h; sourceTree = "<group>"; }; The cahnge to xcodeproj file seems unrelated.
David Levin
Comment 8 2011-06-10 17:12:11 PDT
Committed as http://trac.webkit.org/changeset/88578 (without the xcodeproj change).
Ryosuke Niwa
Comment 9 2011-06-10 22:25:10 PDT
The test added by this patch is failing on GTK. Maybe we just need to add a platform-specific result? http://build.webkit.org/results/GTK%20Linux%2064-bit%20Debug/r88593%20(23265)/fast/workers/worker-crash-with-invalid-location-pretty-diff.html
Adam Barth
Comment 11 2011-06-10 22:27:23 PDT
(In reply to comment #9) > The test added by this patch is failing on GTK. Maybe we just need to add a platform-specific result? Looks like the GTK DumpRenderTree isn't very good at blocking external network requests! It's probably hitting the example.com redirect to iana.org on every test run!
Ryosuke Niwa
Comment 12 2011-06-10 22:28:10 PDT
(In reply to comment #11) > (In reply to comment #9) > > The test added by this patch is failing on GTK. Maybe we just need to add a platform-specific result? > > Looks like the GTK DumpRenderTree isn't very good at blocking external network requests! It's probably hitting the example.com redirect to iana.org on every test run! That sounds like a really annoying bug for iana.org :(
Adam Barth
Comment 13 2011-06-10 22:30:29 PDT
> That sounds like a really annoying bug for iana.org :( I suspect they're pretty used to it... (but we should fix it, of course).
David Levin
Comment 15 2011-06-13 13:03:51 PDT
(In reply to comment #14) > This test is also failing on Windows: > http://build.webkit.org/results/Windows%207%20Release%20(Tests)/r88594%20(13663)/fast/workers/worker-crash-with-invalid-location-pretty-diff.html Windows is also failing fast/workers/worker-event-listener.html. I think there is some other issue going on there that a Window WebKit developer could look at. (In reply to comment #11) > (In reply to comment #9) > > The test added by this patch is failing on GTK. Maybe we just need to add a platform-specific result? > > Looks like the GTK DumpRenderTree isn't very good at blocking external network requests! It's probably hitting the example.com redirect to iana.org on every test run! Addressed http://trac.webkit.org/changeset/88675 (Made it skipped and added a bug for gtk).
David Levin
Comment 16 2011-06-13 13:58:06 PDT
(In reply to comment #15) > (In reply to comment #14) > > This test is also failing on Windows: > > http://build.webkit.org/results/Windows%207%20Release%20(Tests)/r88594%20(13663)/fast/workers/worker-crash-with-invalid-location-pretty-diff.html > > Windows is also failing fast/workers/worker-event-listener.html. I think there is some other issue going on there that a Window WebKit developer could look at. After further review, it appears that the other Web Worker failure only started occurring after my new test, so I filed a bug and put it in the Skipped list for Windows (http://trac.webkit.org/changeset/88688).
Ryosuke Niwa
Comment 17 2011-06-13 14:14:25 PDT
GTK bug is tracked by the bug 62585.
Note You need to log in before you can comment on or make changes to this bug.